argo-rollout-traefik/service.yaml
apiVersion: v1
kind: Service
# namespace: argo-ns
metadata:
  name: traefik-rollout-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: traefik-rollout
---
apiVersion: v1
kind: Service
# namespace: argo-ns
metadata:
  name: traefik-rollout-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: traefik-rollout
