argo-rollout-traefik/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-rollout
  namespace: traefik
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`traefik-rollout.test.example`) && PathPrefix(`/`)
    middlewares:
    - name: http-to-https
      namespace: traefik
    services:
    - kind: TraefikService
      name: traefik-service
      namespace: argo-ns
